@@ -8,18 +8,27 @@ import org.springframework.transaction.annotation.Transactional;
 import showroomz.api.app.inquiry.dto.InquiryCategoryResponse;
 import showroomz.api.app.inquiry.dto.InquiryDetailResponse;
 import showroomz.api.app.inquiry.dto.InquiryListResponse;
+import showroomz.api.app.inquiry.dto.InquiryOrderSummary;
 import showroomz.api.app.inquiry.dto.InquiryRegisterRequest;
 import showroomz.api.app.inquiry.dto.InquiryRegisterResponse;
+import showroomz.api.app.inquiry.dto.InquirySummaryResponse;
 import showroomz.api.app.inquiry.dto.InquiryUpdateRequest;
 import showroomz.api.app.user.repository.UserRepository;
 import showroomz.domain.inquiry.entity.OneToOneInquiry;
 import showroomz.domain.inquiry.repository.OneToOneInquiryRepository;
-import showroomz.domain.inquiry.type.InquiryDetailType;
+import showroomz.domain.inquiry.repository.ProductInquiryRepository;
 import showroomz.domain.inquiry.type.InquiryStatus;
 import showroomz.domain.inquiry.type.InquiryType;
 import showroomz.domain.member.user.entity.Users;
+import showroomz.domain.order.entity.Order;
+import showroomz.domain.order.repository.OrderRepository;
+
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import showroomz.global.dto.PageResponse;
@@ -32,36 +41,19 @@ import showroomz.global.error.exception.ErrorCode;
 public class InquiryService {
 
     private final OneToOneInquiryRepository inquiryRepository;
+    private final ProductInquiryRepository productInquiryRepository;
     private final UserRepository userRepository;
+    private final OrderRepository orderRepository;
 
-    private void validateOrderIdRequirement(InquiryType type, InquiryDetailType detailType, Long orderId) {
-        boolean isOrderIdRequired = (type == InquiryType.CANCEL_REFUND_EXCHANGE)
-                || (detailType == InquiryDetailType.ORDER_CHANGE)
-                || (detailType == InquiryDetailType.DEFECT)
-                || (detailType == InquiryDetailType.AS);
-
-        if (isOrderIdRequired && orderId == null) {
-            throw new BusinessException(ErrorCode.ORDER_ID_REQUIRED);
-        }
-    }
-
-    // 1:1 문의 등록
+    // 1:1 문의 등록 — 답변은 어드민(운영자)만 등록한다
     @Transactional
     public InquiryRegisterResponse registerInquiry(Long userId, InquiryRegisterRequest request) {
         Users user = userRepository.findById(userId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
 
-        InquiryDetailType detailType = request.getDetailType();
-        if (detailType.getParentType() != request.getType()) {
-            throw new BusinessException(ErrorCode.INVALID_INQUIRY_DETAIL_TYPE);
-        }
-
-        validateOrderIdRequirement(request.getType(), detailType, request.getOrderId());
-
         OneToOneInquiry inquiry = OneToOneInquiry.builder()
                 .user(user)
                 .type(request.getType())
-                .category(detailType)
                 .content(request.getContent())
                 .imageUrls(request.getImageUrls())
                 .orderId(request.getOrderId())
@@ -73,14 +65,29 @@ public class InquiryService {
                 .build();
     }
 
-    // 내 문의 내역 조회 (목록)
-    public PageResponse<InquiryListResponse> getMyInquiries(Long userId, Pageable pageable) {
+    // 내 문의 내역 조회 (목록) — status가 있으면 해당 상태만 조회한다 ([답변 대기만] 필터)
+    public PageResponse<InquiryListResponse> getMyInquiries(Long userId, InquiryStatus status, Pageable pageable) {
         Users user = userRepository.findById(userId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
 
-        Page<OneToOneInquiry> page = inquiryRepository.findByUserOrderByCreatedAtDesc(user, pageable);
+        Page<OneToOneInquiry> page = (status == null)
+                ? inquiryRepository.findByUserOrderByCreatedAtDesc(user, pageable)
+                : inquiryRepository.findByUserAndStatusOrderByCreatedAtDesc(user, status, pageable);
 
-        return PageResponse.of(page.map(InquiryListResponse::from));
+        Map<Long, InquiryOrderSummary> orderSummaries = loadOrderSummaries(page.getContent());
+
+        return PageResponse.of(page.map(inquiry ->
+                InquiryListResponse.from(inquiry, orderSummaries.get(inquiry.getOrderId()))));
+    }
+
+    /** 문의 내역 탭 건수 — 1:1 / 상품 문의를 한 번에 내려 탭 배지를 그린다 (C12) */
+    public InquirySummaryResponse getInquirySummary(Long userId) {
+        return InquirySummaryResponse.builder()
+                .oneToOneTotal(inquiryRepository.countByUser_Id(userId))
+                .oneToOneWaiting(inquiryRepository.countByUser_IdAndStatus(userId, InquiryStatus.WAITING))
+                .productTotal(productInquiryRepository.countByUser_Id(userId))
+                .productWaiting(productInquiryRepository.countByUser_IdAndStatus(userId, InquiryStatus.WAITING))
+                .build();
     }
 
     // 문의 상세 조회
@@ -93,7 +100,8 @@ public class InquiryService {
             throw new BusinessException(ErrorCode.ACCESS_DENIED);
         }
 
-        return InquiryDetailResponse.from(inquiry);
+        InquiryOrderSummary order = loadOrderSummaries(List.of(inquiry)).get(inquiry.getOrderId());
+        return InquiryDetailResponse.from(inquiry, order);
     }
 
     // 문의 수정
@@ -106,20 +114,12 @@ public class InquiryService {
             throw new BusinessException(ErrorCode.ACCESS_DENIED);
         }
 
-        if (inquiry.getStatus() == InquiryStatus.ANSWERED) {
+        if (inquiry.isAnswered()) {
             throw new BusinessException(ErrorCode.INQUIRY_ALREADY_ANSWERED);
         }
 
-        InquiryDetailType detailType = request.getDetailType();
-        if (detailType.getParentType() != request.getType()) {
-            throw new BusinessException(ErrorCode.INVALID_INQUIRY_DETAIL_TYPE);
-        }
-
-        validateOrderIdRequirement(request.getType(), detailType, request.getOrderId());
-
         inquiry.update(
                 request.getType(),
-                detailType,
                 request.getContent(),
                 request.getImageUrls(),
                 request.getOrderId()
@@ -136,26 +136,38 @@ public class InquiryService {
             throw new BusinessException(ErrorCode.ACCESS_DENIED);
         }
 
-        if (inquiry.getStatus() == InquiryStatus.ANSWERED) {
+        if (inquiry.isAnswered()) {
             throw new BusinessException(ErrorCode.INQUIRY_ALREADY_ANSWERED);
         }
 
         inquiryRepository.delete(inquiry);
     }
 
-    /** 1:1 문의 카테고리 목록 조회 (대분류 + 소분류) */
+    /** 1:1 문의 유형 목록 조회 (§17-2-1 — 5종 단일 레벨) */
     public List<InquiryCategoryResponse> getInquiryCategories() {
         return Arrays.stream(InquiryType.values())
-                .map(type -> new InquiryCategoryResponse(
-                        type.name(),
-                        type.getDescription(),
-                        InquiryDetailType.findByParentType(type).stream()
-                                .map(detail -> new InquiryCategoryResponse.DetailResponse(
-                                        detail.name(),
-                                        detail.getDescription()
-                                ))
-                                .collect(Collectors.toList())
-                ))
-                .collect(Collectors.toList());
+                .map(type -> new InquiryCategoryResponse(type.name(), type.getDescription()))
+                .toList();
+    }
+
+    /**
+     * 문의에 연결된 주문을 주문 ID로 한 번에 조회해 주문 카드용 요약으로 만든다.
+     * 주문을 연결하지 않은 문의(orderId = null)는 결과에 포함되지 않아 화면에서도 블록이 노출되지 않는다.
+     */
+    private Map<Long, InquiryOrderSummary> loadOrderSummaries(List<OneToOneInquiry> inquiries) {
+        Set<Long> orderIds = inquiries.stream()
+                .map(OneToOneInquiry::getOrderId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+
+        if (orderIds.isEmpty()) {
+            return new HashMap<>();
+        }
+
+        Map<Long, InquiryOrderSummary> summaries = new HashMap<>();
+        for (Order order : orderRepository.findAllByIdInWithProducts(orderIds)) {
+            summaries.put(order.getId(), InquiryOrderSummary.from(order));
+        }
+        return summaries;
     }
 }
